# press

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  build_docker_image.sh  docker-compose.yml  main.py  nvidia.jsonl  pyproject.toml
.cursor/rules/: project-rules.mdc
dags/: amd_dag.py  intel_dag.py  nvidia_dag.py
press/: items.py  middlewares.py  pipelines.py  settings.py
press/spiders/: amd.py  base_spider.py  intel.py  nvidia.py
