[project]
name = "press"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.52.0",
    "psql",
    "scrapy>=2.13.0",
]

[tool.uv.sources]
psql = { path = "../../../../home/mix060514/pj/psql", editable = true }

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # 基本错误检查

[dependency-groups]
dev = [
    "ruff>=0.11.11",
]
